--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tabler/icons-react": "^2.34.0",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tabler/icons-react": "^2.39.0",
     "classnames": "^2.3.2",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.1",
-    "recoil": "^0.7.7",
-    "recoil-persist": "^5.1.0",
-    "sass": "^1.67.0",
-    "socket.io-client": "^4.7.2",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "next": "latest",
+    "react": "latest",
+    "react-confetti-explosion": "^2.1.2",
+    "react-dom": "latest",
+    "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.3",
+    "react-use-websocket": "^4.5.0",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.69.5",
+    "socket.io-client": "^4.7.2"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "postcss": "^8",
+    "tailwindcss": "^3"
   }
 }
